fixed education button bug when on mobile and changed the layout of the portfolio

--- a/assets/stylesheets/employment.css
+++ b/assets/stylesheets/employment.css
@@ -97,4 +97,13 @@
 		padding-right: 20px;
 		padding-left: 20px;
 	}
+		.company button { 
+		float: inherit;
+		font-size: 20px;
+		margin: 10px;
+	}
+
+	.company .glyphicon {
+    top: 15px;
+	}
 }
