--- a/assets/stylesheets/portfolio.css
+++ b/assets/stylesheets/portfolio.css
@@ -3,13 +3,20 @@
 }
 
 #portfolioContainer  h2 {
-	margin: 100px 20px;
+	margin: 50px 0px 20px;
 	color: white;
 	letter-spacing: 2px;
 }
 
+
+#portfolioContainer  h6 {
+	margin-bottom: 40px;
+	color: white;
+	letter-spacing: 2px;
+	margin-left: 20px;
+}
+
 .website {
-	margin-bottom: 120px;
 	position: relative;
 }
 
@@ -19,7 +26,7 @@
 
 .webImg {
 	background-size: 100%;
-	height:600px;
+	height:550px;
 	position: relative;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -30,39 +37,36 @@
 }
 
 .websiteInfo {
-	position: absolute;
-	top: 200px;
-	right: 0;
-	left: 0;
-	padding: 30px 10%;
+	padding: 5%;
 	background-color: rgba(44, 62, 80, 0.72);
-	color: white;
 	box-shadow: 1px 2px 3px rgba(0,0,0,.6);
-	height: 200px;
-	line-height: inherit;
 }
 
-.websiteInfo > h4 {
-	line-height: inherit;
+.websiteInfo ul {
+	line-height: 1.5;
+	letter-spacing: 1.5px;
+	color: #DBDADA;
+}
+
+.websiteInfo > ul:nth-child(2) {
+	padding-top: 20px;
 }
 
 
 .websiteInfo > a {
-  font-family: inherit;
-  font-weight: 500;
-  line-height: 1.1;
   font-size: 24px;
-  color: white;
+  color: #858282;
+  padding-bottom: 20px;
+ 	letter-spacing: 1.5px;
 }
 
 @media screen and (max-width:600px) {
-	.websiteInfo {
-		position: relative;
-		top: 0;
-		height: auto;
-		background-color: #2C3E50;
-		color: white;
-		box-shadow: none;
+	.websiteInfo ul {
+		line-height: 1;
+		letter-spacing: .5px;
+	}
+	.websiteInfo ul {
+		padding-left: 0;
 	}
 	.webImg {
 		height:400px;
